--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -191,6 +191,7 @@ body {
   #section-opinion .review {
     grid-template-columns: 320px 320px;
     column-gap: 20px;
+    grid-template-rows: 220px 220px;
   }
 
   #footer {
